# russenger

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  russenger.geany
example/: .env  Cargo.toml  Readme.md
example/src/: main.rs
examples/: .env  Cargo.toml  README.md  russenger.db
examples/choosecolor/: .env  Cargo.toml  russenger.db
examples/choosecolor/src/: main.rs
examples/geminibot/: .env  Cargo.toml  Readme.md  russenger.db
examples/geminibot/src/: main.rs
examples/hello/: .env  Cargo.toml  Readme.md  russenger.db
examples/hello/src/: main.rs
examples/next/: .env  Cargo.toml
examples/next/src/: const_data.rs  main.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
russenger/: Cargo.toml  README.md
russenger/src/: lib.rs  models.rs  prelude.rs  query.rs
russenger/src/core/: action.rs  app.rs  app_state.rs  incoming_data.rs  mod.rs  request.rs  response.rs  router.rs  services.rs
russenger/src/db/: mod.rs  models.rs
russenger/src/response_models/: button.rs  generic.rs  get_started.rs  media.rs  mod.rs  next.rs  payload.rs  persistent_menu.rs  quick_replies.rs  recipient.rs  sender_action.rs  text.rs
russenger/src/services/: handlers.rs  mod.rs
russenger_macro/: Cargo.toml
russenger_macro/src/: lib.rs
src/: app.rs  cli.rs  entity.rs  lib.rs  main.rs  models.rs  prelude.rs  query.rs  test.rs
src/command/: arg_parse.rs  mod.rs
src/core/: action.rs  app.rs  app_state.rs  callback.rs  data.rs  deserializers.rs  facebook_request.rs  incoming_data.rs  message_deserializer.rs  mod.rs  request.rs  request_handler.rs  response.rs  services.rs  webhook_query.rs
src/core_app/: core.rs  mod.rs
src/hooks/: messages.rs  mod.rs
src/hooks/response_models/: generic.rs  mod.rs  quick_replies.rs  simple_model.rs
src/migration/: m20220101_000001_create_table.rs  mod.rs
src/models/: mod.rs
src/query/: mod.rs
src/repository/: mod.rs
src/response_models/: button.rs  generic.rs  get_started.rs  media.rs  mod.rs  next.rs  payload.rs  persistent_menu.rs  quick_replies.rs  recipient.rs  sender_action.rs  text.rs
template/: .env  Cargo.toml  Readme.md  Rocket.toml
template/src/: main.rs
templates/: index.html.tera
