[workspace]
resolver = "2"
members = ["russenger", "examples/*"]

[workspace.dependencies]
# Web framework and HTTP handling
actix-web = "4"
actix-files = "0.6.5"
reqwest = "0.12.4"

# Async utilities
tokio = "^1.43.0"

# Database
sqlx = "0.8"

# Serialization and Templating
serde = "1.0"
serde_json = "1.0.107"

# Environment and Configuration
dotenv = "0.15.0"

# Error handling
anyhow = "1.0.95"

# Orm
rusql-alchemy = { version = "0.5.0-rc.6", default-features = false }
