[workspace]
resolver = "2"
members = ["russenger", "examples/*"]

[workspace.dependencies]
# Web framework and HTTP handling
actix-web = "4"
actix-files = "0.6.6"
reqwest = "0.12.15"

# Async utilities
tokio = "^1.43.0"

# Database
sqlx = "0.8"

# Serialization and Templating
serde = "1.0"
serde_json = "1.0.140"

# Environment and Configuration
dotenv = "0.15.0"

# Error handling
anyhow = "1.0.98"

# Orm
rusql-alchemy = { version = "0.5.3", default-features = false }
