[package]
name = "russenger"
version = "0.3.5-rc"
edition = "2021"
description = "A Rust library designed to simplify the handling of Facebook Messenger webhook responses."
license = "Apache-2.0"
documentation = "https://docs.rs/russenger/latest/russenger/"
homepage = "https://github.com/j03-dev/russenger"
repository = "https://github.com/j03-dev/russenger"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
keywords = ["facebook", "bot", "messenger", "rust"]
categories = ["web-programming", "api-bindings"]


[features]
sqlite = ["rusql-alchemy/sqlite"]
postgres = ["rusql-alchemy/postgres"]
mysql = ["rusql-alchemy/mysql"]

[dependencies.rusql-alchemy]
workspace = true

[dependencies]
# Web framework and HTTP handling
actix-web.workspace = true
actix-files.workspace = true
reqwest = { workspace = true, features = ["json"] }

# Async utilities
tokio.workspace = true

# Database
sqlx.workspace = true # Consider specifying database features (e.g., ["runtime-tokio-rustls", "postgres"])

# Serialization and Templating
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Environment and Configuration
dotenv.workspace = true

# Error handling
anyhow.workspace = true

russenger_macro.workspace = true
