[package]
name = "choosecolor"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russenger = { workspace = true, features = ["postgres"] }
actix-web.workspace = true
sqlx.workspace = true
