[package]
name = "next"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russenger.path = "../../russenger"
sqlx.workspace = true
tokio = { workspace = true, feature = ["macros", "rt-multi-thread"] }
