[package]
name = "next"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russenger = { workspace = true, features = ["sqlite"] }
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
